[package]
name = "neon-unix-sockets"
version = "0.1.0"
authors = ["David MacEachern <david.maceachern.tech@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_unix_sockets"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.1"

[dependencies]
neon = "0.5.1"
serde_json = "1.0.59"
bytes = "0.4"
